# jete

./: .gitignore  COPYING  Cargo.toml  TODO
.github/: dependabot.yml
bouncer/: Cargo.toml
bouncer/src/: lib.rs
src/: display.rs  editor.rs  highlight.rs  lib.rs  main.rs  pubsub.rs  state.rs  terminal.rs  text.rs  userinput.rs
typedstore/: Cargo.toml
typedstore/src/: lib.rs
