[workspace]
members = [
    ".",
    "bouncer"
]

[package]
name = "jete"
version = "0.1.0"
authors = ["James Elford <james.p.elford@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
crossbeam = "0.8"
syntect = { version = "4.5", default-features = false, features = ["default-fancy"] }
log = "0.4"
log4rs = { version = "1", default-features = false, features = ["file_appender", "pattern_encoder"] }
lazy_static = "1.4"
bouncer = { path = "./bouncer" }